examples/test/testpolicy11113.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11113
  namespace: namespace270
spec:
  podSelector:
    matchLabels:
      key39: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value6
          key17: value39
      podSelector:
        matchLabels:
          key8: value38
          key11: value35
          key16: value31
